fixed user menu overlap; location chooser sets notes for points

--- a/app/assets/stylesheets/observations/uploader.css.scss
+++ b/app/assets/stylesheets/observations/uploader.css.scss
@@ -26,7 +26,7 @@ input.failed, textarea.failed {
   position: fixed;
   width: 100%;
   margin-top: -120px;
-  z-index: 10;
+  z-index: 1001;
 }
 
 .nav_add_obs {
@@ -39,7 +39,7 @@ input.failed, textarea.failed {
   box-shadow: 0px 3px 10px #e7e7e7;
   position: fixed;
   width: 100%;
-  z-index: 100;
+  z-index: 1000;
   top: 20px;
   .navbar-right {
     margin-right: 0px;
